{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 54,
  "lineage": "ffb52812-03dc-c9cb-80ad-ee565fe61b29",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "devopsshack_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891377361231:internet-gateway/igw-086a03dc0b3368426",
            "id": "igw-086a03dc0b3368426",
            "owner_id": "891377361231",
            "region": "eu-west-2",
            "tags": {
              "Name": "devopsshack-igw"
            },
            "tags_all": {
              "Name": "devopsshack-igw"
            },
            "vpc_id": "vpc-0adf550ad0de114f5"
          },
          "dependencies": [
            "aws_vpc.devopsshack_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "devopsshack_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891377361231:route-table/rtb-0d0d8a2171d125640",
            "id": "rtb-0d0d8a2171d125640",
            "owner_id": "891377361231",
            "propagating_vgws": [],
            "region": "eu-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-086a03dc0b3368426",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devopsshack-route-table"
            },
            "tags_all": {
              "Name": "devopsshack-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0adf550ad0de114f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.devopsshack_igw",
            "aws_vpc.devopsshack_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09317cba5ac054935",
            "region": "eu-west-2",
            "route_table_id": "rtb-0d0d8a2171d125640",
            "subnet_id": "subnet-0b8ca1f0905225ffb"
          },
          "dependencies": [
            "aws_internet_gateway.devopsshack_igw",
            "aws_route_table.devopsshack_route_table",
            "aws_subnet.devopsshack_subnet",
            "aws_vpc.devopsshack_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049685139cba4b192",
            "region": "eu-west-2",
            "route_table_id": "rtb-0d0d8a2171d125640",
            "subnet_id": "subnet-0e6bc7906cd05beb0"
          },
          "dependencies": [
            "aws_internet_gateway.devopsshack_igw",
            "aws_route_table.devopsshack_route_table",
            "aws_subnet.devopsshack_subnet",
            "aws_vpc.devopsshack_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devopsshack_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891377361231:security-group/sg-0c15242a3297970d7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c15242a3297970d7",
            "ingress": [],
            "name": "terraform-20250905231011629800000001",
            "name_prefix": "terraform-",
            "owner_id": "891377361231",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devopsshack-cluster-sg"
            },
            "tags_all": {
              "Name": "devopsshack-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0adf550ad0de114f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.devopsshack_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devopsshack_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891377361231:security-group/sg-01c87dd1c320bc5ca",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01c87dd1c320bc5ca",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20250905231011644200000002",
            "name_prefix": "terraform-",
            "owner_id": "891377361231",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devopsshack-node-sg"
            },
            "tags_all": {
              "Name": "devopsshack-node-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0adf550ad0de114f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.devopsshack_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "devopsshack_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891377361231:subnet/subnet-0b8ca1f0905225ffb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b8ca1f0905225ffb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377361231",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "devopsshack-subnet-0"
            },
            "tags_all": {
              "Name": "devopsshack-subnet-0"
            },
            "vpc_id": "vpc-0adf550ad0de114f5"
          },
          "dependencies": [
            "aws_vpc.devopsshack_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891377361231:subnet/subnet-0e6bc7906cd05beb0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e6bc7906cd05beb0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377361231",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "devopsshack-subnet-1"
            },
            "tags_all": {
              "Name": "devopsshack-subnet-1"
            },
            "vpc_id": "vpc-0adf550ad0de114f5"
          },
          "dependencies": [
            "aws_vpc.devopsshack_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "devopsshack_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891377361231:vpc/vpc-0adf550ad0de114f5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0681b606c4c43bae3",
            "default_route_table_id": "rtb-056d28f947bc822bf",
            "default_security_group_id": "sg-017ca808d40a478f5",
            "dhcp_options_id": "dopt-0463bf072b39f7839",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0adf550ad0de114f5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-056d28f947bc822bf",
            "owner_id": "891377361231",
            "region": "eu-west-2",
            "tags": {
              "Name": "devopsshack-vpc"
            },
            "tags_all": {
              "Name": "devopsshack-vpc"
            }
          }
        }
      ]
    }
  ]
}